fix alignment

--- a/jg/coop/css/content/_jobs.scss
+++ b/jg/coop/css/content/_jobs.scss
@@ -211,7 +211,7 @@
   display: flex;
   flex-direction: row;
   gap: .3rem;
-  align-items: middle;
+  align-items: center;
   text-decoration: none;
   white-space: nowrap;
 }
